--- a/activityService/src/main/resources/application.yml
+++ b/activityService/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: activityService
+    name: activity-service
   data:
     mongodb:
     url: mongodb://localhost:27017/fitness_activity
@@ -8,4 +8,9 @@ spring:
 
 server:
   port: 8082
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
