--- a/userService/src/main/resources/application.yml
+++ b/userService/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: userservice
+    name: user-service
   datasource:
     url: jdbc:mysql://localhost:3306/fitness_user_db
     username: root
@@ -13,3 +13,7 @@ spring:
 server:
   port: 8081
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
